--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
 
           <input id="textBlue" class="textColor" type="text" placeholder="Digite um valor de 0 a 255" autofocus>
-          <p><a class="btn btn-secondary" id="blueButton">Aleatório</a></p>
+          <p><a class="btn btn-secondary" id="blueButton">Cor Aleatória</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
