arrumar bug na funcaoCopiarRGB

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <p><a class="btn btn-secondary" id="copiarCor">Copiar Cor</a></p>
 
       <footer class="container">
-        <p>&copy; Marcos P-Costa Dev &middot;</p>
+        <p>&copy; Desenvolvido Por <a href="https://marcospcosta.dev" target="_blank"> Marcos Paulo Costa</a> &middot;</p>
       </footer>
   </main>
 
